Spacing after title on show view

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Showing Post</h1>
 
-<strong><%= @article.title %></strong><br>
+<strong><%= @article.title %></strong><br><br>
 <%= @article.description %><br>
 
 <hr>
