show view style edited

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
-<h1>Showing Post</h1>
+<center><h1>Showing Post</h1>
 
 <strong><%= @article.title %></strong><br><br>
 <%= @article.description %><br>
 
 <hr>
-<%= link_to "All Articles", articles_path %>
+<%= link_to "All Articles", articles_path %></center>
