--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 <hr>
 <% @articles.each do |article| %>
 
-<strong><%= article.title %></strong><br><br><%= article.description %><br><br> | <%= link_to "Show Post", article_path(article) %> | <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are You Sure?"} %> | <%= link_to "Edit", edit_article_path(article) %><hr>
+<strong><%= article.title %></strong><br><br><%= article.description %><br><br><%= link_to "Show Post", article_path(article) %> | <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are You Sure?"} %> | <%= link_to "Edit", edit_article_path(article) %><hr>
 
 
 <% end %>
