Added navigation from bootstrap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,12 @@
+
+.navbar-default{
+    background: #dedede !important;
+    border-radius: 0 !important;
+    border: none !important;
+}
+
+
+
+
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
